refactor: get reference target version by source version functionality